--- a/projects/engineering_robot_head.html
+++ b/projects/engineering_robot_head.html
@@ -56,10 +56,71 @@
 		
 	
 		<div class="container">
-			<h2 class="centered">UR5 Arm System Head</h2>
+			<h2 class="centered">UR5 Arm System Robot Head</h2>
 			<!---<p class="light"><b>Note:</b> This is an ongoing project, so I will be frequently updating the page.</p>--->
-			<!--<p class="date">March 2019 - May 2019</p>-->
-			<p class="main_content"><a href="https://yufengericwu.myportfolio.com/robot-head" target="_blank">https://yufengericwu.myportfolio.com/robot-head</a></p>
+			<p class="date">Fall 2019</p>
+			<p class="main_content">As part of my ongoing research project with Professor Jivko Sinapov at Tufts University, I am building a robot head with 3 degrees of freedom for a UR5 Robot arm system in the lab. Currently, the mechanism consists of a stepper motor and two large servos. The plan is to mount a kinect camera on top of the head and control it in a 3D space using arduino. </p>
+			<p class="main_content">In the end, although I wasn't able to fully finish the physical head, I gained valuable experience in applying prototyping skills and learning the basics of Robot Operating System (ROS).</p>
+			<p class="main_content"><b>Skills used:</b></p>
+			<p class="tab">Solidworks</p>
+			<p class="tab">Rapid Prototyping</p>
+			<p class="tab">ROS (Basic), converting Solidworks assembly to URDF file</p>
+			<p class="tab">Arduino, breadboarding, etc.</p>
+			<br>
+			
+			<h3>Version 1</h3>
+			<p class="main_content">As I went through the basic ROS tutorial, I started designing the first version of the actual head. It is a 3 degrees-of-freedom mechanism consists of one stepper motor and 2 servos, capable of rotating a kinect camera mounted on top of the head.</p>
+			<div class="row_lightbox">
+				<div class="column_lightbox">
+					<img src="/documents/projects/engineering_ur5_head/sketch_1.png" onclick="openModal();currentSlide(1)" class="hover-shadow">
+				</div>
+				<div class="column_lightbox">
+					<img src="/documents/projects/engineering_ur5_head/cad_1.png" onclick="openModal();currentSlide(2)" class="hover-shadow">
+				</div>
+				<div class="column_lightbox">
+					<img src="/documents/projects/engineering_ur5_head/detail_1.png" onclick="openModal();currentSlide(3)" class="hover-shadow">
+				</div>
+				<div class="column_lightbox">
+					<img src="/documents/projects/engineering_ur5_head/detail_2.png" onclick="openModal();currentSlide(4)" class="hover-shadow">
+				</div>
+			</div>
+			<p class="img_caption">Design and Prototyping</p>
+			<br>
+			
+			<h3>Version 2</h3>
+			
+			<p class="main_content">The first design requires too much torque from the horizontal servo when lifting the kinect up. Therefore, in this version I tried to bring the center of mass of the top part closer to the axis of rotation to improve the performance of the servos.</p>
+			<div class="single"><img src="/documents/projects/engineering_ur5_head/sketch_2.png" onclick="openModal();currentSlide(5)" class="hover-shadow"></div>
+			<p class="img_caption">Design Sketch for Version 2</p>
+			<br>
+			<div class="row_lightbox">
+				<div class="column_lightbox">
+					<img src="/documents/projects/engineering_ur5_head/render_1.jfif" onclick="openModal();currentSlide(6)" class="hover-shadow">
+				</div>
+				<div class="column_lightbox">
+					<img src="/documents/projects/engineering_ur5_head/render_2.jfif" onclick="openModal();currentSlide(7)" class="hover-shadow">
+				</div>
+			</div>
+			<p class="img_caption">Solidworks Design</p>
+			<br>
+			
+			<p class="main_content">By this point, I have finished working on the ROS basic tutorial and URDF tutorial; therefore, I changed my focus from hardware to the software aspect. I started by converting the solidworks model into Collada files. Then, I re-assembled all the parts back to a single urdf file and visualized the joints in RVIZ.</p>
+			
+			<div class="row_lightbox">
+				<div class="column_lightbox">
+					<img src="/documents/projects/engineering_ur5_head/rviz1.png" onclick="openModal();currentSlide(8)" class="hover-shadow">
+				</div>
+				<div class="column_lightbox">
+					<img src="/documents/projects/engineering_ur5_head/rviz2.png" onclick="openModal();currentSlide(9)" class="hover-shadow">
+				</div>
+			</div>
+			<div class="single"><img src="/documents/projects/engineering_ur5_head/rviz.gif" onclick="openModal();currentSlide(10)" class="hover-shadow"></div>
+			<p class="img_caption">RVIZ Visualization</p>
+			<br>
+			
+			
+			
+			<p class="main_content">Here's the <a href="https://github.com/EricYufengWu/ur5_head_description" target="_blank">link</a> to the ROS package I created for visualizing the model.</p>
 		</div>
 
 	
@@ -87,23 +148,37 @@
 				<div class="modal-content">
 
 					<div class="mySlides">
-						<img src="/documents/projects/engineering_ceramics_printer/stage1_working_1.JPEG">
+						<img src="/documents/projects/engineering_ur5_head/sketch_1.png">
 					</div>
 					<div class="mySlides">
-						<img src="/documents/projects/engineering_ceramics_printer/stage1_working_2.JPEG">
+						<img src="/documents/projects/engineering_ur5_head/cad_1.png">
 					</div>
 					<div class="mySlides">
-						<img src="/documents/projects/engineering_ceramics_printer/stage1_working_3.JPEG">
+						<img src="/documents/projects/engineering_ur5_head/detail_1.png">
 					</div>
 					<div class="mySlides">
-						<img src="/documents/projects/engineering_ceramics_printer/stage1_working_4.JPEG">
-					</div>			
-					<div class="mySlides">
-						<img src="/documents/projects/engineering_ceramics_printer/fabrication_1.JPG">
-					</div>				
-					<div class="mySlides">
-						<img src="/documents/projects/engineering_ceramics_printer/electronics_1.jpeg">
+						<img src="/documents/projects/engineering_ur5_head/detail_2.png">
 					</div>
+					<div class="mySlides">
+						<img src="/documents/projects/engineering_ur5_head/sketch_2.png">
+					</div>
+					<div class="mySlides">
+						<img src="/documents/projects/engineering_ur5_head/render_1.jfif">
+					</div>
+					<div class="mySlides">
+						<img src="/documents/projects/engineering_ur5_head/render_2.jfif">
+					</div>
+					<div class="mySlides">
+						<img src="/documents/projects/engineering_ur5_head/rviz1.png">
+					</div>
+					<div class="mySlides">
+						<img src="/documents/projects/engineering_ur5_head/rviz2.png">
+					</div>
+					<div class="mySlides">
+						<img src="/documents/projects/engineering_ur5_head/rviz.gif">
+					</div>
+					
+					
 					<!-- Next/previous controls -->
 					<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 					<a class="next" onclick="plusSlides(1)">&#10095;</a>
